--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,10 @@ dependencies {
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
+    testCompile group: 'com.h2database', name: 'h2',
+            version: '1.4.200'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
 }
 
 test {
